our popular insights spacing issues, style.scss for comments section

--- a/app/assets/styles/modules/_aboutUs.scss
+++ b/app/assets/styles/modules/_aboutUs.scss
@@ -246,7 +246,7 @@
 }
 .about-popular-content {
 	background: #eff1fe;
-	padding: 40px;
+	//padding: 40px;
 	margin-top: 60px;
 	position: relative;
 	//z-index: 99;
