--- a/app/assets/styles/style.scss
+++ b/app/assets/styles/style.scss
@@ -84,14 +84,7 @@ img {
         margin-bottom:5px;
     }
  }
-
-//  .insights-section .section-items .section-item-two img.thumbnail {  
-//     position: relative;
-//  } 
-// .insights-section .section-items .section-item-two h4 {
-//     margin: inherit;
-// }
-
+ 
 /* Comment section */
 #node-insight-article-field-comm{
     h2 {
@@ -118,7 +111,11 @@ padding-top:10px;
     }
 }
 
-.by-viewer {border-bottom: 1px solid #ddd; padding-bottom:10px; margin-bottom:10px;}
+.by-viewer {border-bottom: 1px solid #ddd; padding-bottom:10px; margin-bottom:10px;
+.comment-show {cursor: pointer;}
+}
+.indented {position:relative; left: 20px; margin-top:-10px;}
+.indented .by-viewer {border-bottom: none;}
 .rate-widget.thumbsup {margin:0 10px; float: left;}
 div.thumbsup-rating-wrapper > div > label.thumbsup-rating-label {margin-bottom: 0;}
 div.thumbsup-rating-wrapper > div > label.thumbsup-rating-label-up:before { 
@@ -127,11 +124,33 @@ div.thumbsup-rating-wrapper > div > label.thumbsup-rating-label-up:before {
     margin:0 5px;
 }
 .rate-widget.thumbsup:nth-last-child(1) {float:right} 
+.rate-widget.thumbsup:nth-last-child(1) .rating-option-result {display: none;}
 .rate-widget.thumbsup:nth-last-child(1) div.thumbsup-rating-wrapper > div > label.thumbsup-rating-label-up:before { 
     content: "\f024";
     margin:0 5px;
 }
-.by-viewer h5.font-medium small {font-size: 60%; text-transform: uppercase; }
+.by-viewer h2[rel="bookmark"] {display:none;}
+.by-viewer h5.font-medium small.commentemail {font-size: 60%;}
+.by-viewer h5.font-medium small.commentdate {font-size: 60%; text-transform: uppercase; }
+span.comment-show, .by-viewer .btn-link, .rating-table {color: $titlePink;}
+div.thumbsup-rating-wrapper > div > label.thumbsup-rating-label:hover, div.thumbsup-rating-wrapper > div > label.thumbsup-rating-label:active, div.thumbsup-rating-wrapper > div > label.thumbsup-rating-label:focus {
+    color: $titlePink;
+}
+.initial {
+    height: 50px;
+    width: 50px;
+    background-color: #bbb;
+    border-radius: 50%;
+    display: inline-block;
+    line-height: 3;
+    position: absolute;
+    left: -60px;
+    text-align: center;
+
+@media screen and (max-width:800px) {
+    position: relative;
+    left:-10px;
+}}
 form.comment-form {
     input[type="text"], input[type="email"], textarea {
         display: block;
